--- a/style.css
+++ b/style.css
@@ -1,26 +1,34 @@
 /*general*/
 body {
     color: #2e2a26;
-    display: flex;
     flex-direction: column;
+    display: flex;
+    /* justify-content: space-between; */
+
+
 }
 .header, .body, .footer{
-    padding: 10px 20%;
-    margin: auto;
+ 
 }
 img{
-    /* display: flex; */
+
     max-width: 23px;
 }
 /*header*/
 .header {
+    flex-grow: 1;
+    padding-right: 0;
+    flex-shrink: 0;
     background-color: white;
     color: blanchedalmond;
+    display: flex;
+    justify-content: flex-end;
     /* justify-content: space-between; */
     /* flex-direction: row; */
 }
 a {
     text-decoration: none;
+    color:#2e2a26;
 }
 .links {
     /* align-items: flex-end; */
@@ -44,17 +52,50 @@ li {
 }
 /* body */
 .body {
+    flex-grow: 1;
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+
+}
+.content{
     max-width: 600px;
+   
 }
 form {
-    
+   
 }
-.search {
-    width: auto;
+.input {
+    width: 100%;
+    height: 30px;
+    border-radius: 20px;
+    display: flex;
     
 }
 .logo {
-    max-width: 300px;
+    max-width: 600px;
+    display: flex;
 }
-.search {
+.options {
+    justify-content: center;
+    text-align: center;
+}
+/* footer */
+.footer {
+    flex-direction: column;
+    align-items: end;
+    margin-top: auto;
+    flex-shrink:0;
+    padding: 20px;
+    background-color:rgb(238, 238, 238);
+
+
+}
+
+.country {
+    display: block;
+}
+.bottom {
+    display: flex;
+    justify-content: space-between;
 }
