--- a/style.css
+++ b/style.css
@@ -1,24 +1,30 @@
 /*general*/
 body {
+    /* default body format */
     color: #2e2a26;
     flex-direction: column;
     display: flex;
+    min-height: 100vh;
+    margin: 0;
+    font-family: Arial,sans-serif;
+    font-size: 14px;
     /* justify-content: space-between; */
 
 
 }
 .header, .body, .footer{
- 
+    padding: 10px;
 }
 img{
-
     max-width: 23px;
+}
+button {
+    
+   
+
 }
 /*header*/
 .header {
-    flex-grow: 1;
-    padding-right: 0;
-    flex-shrink: 0;
     background-color: white;
     color: blanchedalmond;
     display: flex;
@@ -32,7 +38,6 @@ a {
 }
 .links {
     /* align-items: flex-end; */
-    font-size: 18px;
     color: #E5E7EB;
     display: inline-block;
 }
@@ -52,50 +57,79 @@ li {
 }
 /* body */
 .body {
+    height: 100%;
     flex-grow: 1;
+    align-items: center;
     display: flex;
-    flex-grow: 1;
     justify-content: center;
+    flex-direction: column;
 
 }
 .content{
     max-width: 600px;
+    display: flex;
+    justify-content: center;
    
 }
 form {
-   
+    max-width: 100%;
 }
 .input {
+    margin: 20px;
     width: 100%;
     height: 30px;
     border-radius: 20px;
     display: flex;
+    justify-self: center;
+    border: 0.5px solid  rgb(223, 222, 222);
     
 }
 .logo {
     max-width: 600px;
-    display: flex;
 }
 .options {
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     text-align: center;
 }
+.search, .lucky {
+    padding: 5px;
+    text-decoration: none;
+    border: 0.5px solid  rgb(248,244,244);
+    
+}
+.option1 {
+    display: inline-block;
+}
+.option2 {
+    display: inline-block;
+}
+
 /* footer */
 .footer {
-    flex-direction: column;
-    align-items: end;
-    margin-top: auto;
-    flex-shrink:0;
-    padding: 20px;
-    background-color:rgb(238, 238, 238);
-
+    flex-shrink: 0;
+    background-color:rgb(248,244,244);
+    margin: 0;
 
 }
 
-.country {
-    display: block;
+.country, .bottom {
+    padding: 10px;
 }
 .bottom {
+    flex-direction: row;
     display: flex;
     justify-content: space-between;
 }
+.option1, .option2 {
+    display: inline-block;
+}
+.option1 {
+   
+};
+
+.option2 {
+    
+};
+
