--- a/style.css
+++ b/style.css
@@ -27,9 +27,14 @@ button {
     background-color: white;
     color: blanchedalmond;
     display: flex;
-    justify-content: flex-end;
+    height: 100px;
+    flex-direction: row;
     /* justify-content: space-between; */
     /* flex-direction: row; */
+}
+.title{
+    display: flex;
+    height: 100%;
 }
 a {
     text-decoration: none;
@@ -38,7 +43,8 @@ a {
 .links {
     /* align-items: flex-end; */
     color: #E5E7EB;
-    display: inline-block;
+    display: flex;
+    justify-content:flex-end;
 }
 ul {
     list-style-type: none;
@@ -55,13 +61,13 @@ li {
   
 }
 /* body */
-.body {
+.main {
 
     flex-grow: 1;
     flex-wrap: wrap;
     align-items: center;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     flex-direction: column;
     margin: 0;
 
@@ -112,16 +118,70 @@ form {
 .option2 {
     display: inline-block;
 }
+
 /* image search html*/
 .subtitle {
     color: #4285f4;
     font: 16px / 16px Arial, sans-serif;
     top: 430px;
     right: 500px;
-    
+
     white-space: nowrap;
 
 }
+/* advanced search html */
+.advanced {
+    flex-grow: 1;   
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+    margin: 0;
+}
+.advanced .main {
+    padding: 10px;
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+}
+.advanced .content {
+    flex-wrap: nowrap;
+    justify-content: left;
+
+}
+.advanced form {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    flex-wrap: nowrap;
+   
+}
+.advanced .prompt {
+    align-items: center;
+    flex-wrap: nowrap;
+    display: flex;
+    flex-direction: row;
+}
+
+.advanced .main .prompt span {
+    width: 300px;
+}
+.advanced .options {
+    display: flex;
+    justify-content: right;
+    flex-direction: row;
+}
+.advanced .input {
+    border-radius: 0px;
+    display: flex;
+    max-width: 500px;
+}
+
+.advanced .search {
+    background-color: #4285f4;
+    color:white;
+    border:#4285f4;
+}
+
 /* footer */
 .footer {
     flex-shrink: 0;
